--- a/new_topic.html
+++ b/new_topic.html
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
         </button>
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Newton's<a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a> </a>
+        <a id="brand" class="navbar-brand" href="#">newton's<span class="brand-highlight">apple</span></a>
         <form id="mobile-search">
           <input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
         </form>
@@ -143,7 +143,7 @@
 		  <label for="question_header_contents" class="col-2 col-form-label">Rules of the website (optional):</label>
           <textarea class="form-control" rows="1" placeholder="enter your rules, separated by commas"></textarea>
         </div>
-		
+
         <div class="well">
 			<p><span class="glyphicon glyphicon-warning-sign"></span> Remember: You can later edit anything on the topic page except the name!</p>
         </div>
