--- a/topic.html
+++ b/topic.html
@@ -38,8 +38,7 @@
 			<span class="icon-bar"></span>
 		    </button>
 		    <!-- Brand -->
-        <a id="brand" class="navbar-brand" href="#">Newton's </a>
- 			<a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a>
+        <a id="brand" class="navbar-brand" href="#">newton's<span class="brand-highlight">apple</span></a>
 		    <form id="mobile-search">
 			<input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
 		    </form>
@@ -101,9 +100,9 @@
 		    <a href="#">biology</a>
 		    <a href="#">rocket science</a>
 		</div>
-		
+
     </div>
-	
+
 	<div id="extras-side-nav" class="side-nav">
       <div class="panel side-nav-guidelines">
         <div class="panel-body">
@@ -122,10 +121,10 @@
       </div>
       </div>
     </div>
-	
+
 	</nav>
-	
-	
+
+
 	<div class="container" id="topicBody">
 
     <div class="row">
@@ -193,7 +192,7 @@
 					</div>
 				</div>
 			</div>
-				
+
 			<div class="question well">
 				<h2 class ="questionTitle"><a href="#">My piano seems a bit off tune. Did anyone else have this problem?</a> </h2>
 				<p class="questionInfo">
@@ -229,7 +228,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="question well">
 				<h2 class ="questionTitle"><a href="#">What's the most depressing song you know?</a> </h2>
 					<p class="questionInfo">
@@ -268,7 +267,7 @@
     </div>
 
   </div>
-	
+
 	<!-- Footer -->
 	<footer>
 	    <div class="container">
