--- a/search.html
+++ b/search.html
@@ -38,8 +38,7 @@
 			<span class="icon-bar"></span>
 		    </button>
 		    <!-- Brand -->
-        <a id="brand" class="navbar-brand" href="#">Newton's </a>
- 			<a href="#" class="navbar-left"><img src="doc/images/prototype2.png" onmouseover="changeLogo()" onmouseout="resetLogo()"></a>
+        <a id="brand" class="navbar-brand" href="#">newton's<span class="brand-highlight">apple</span></a>
 		    <form id="mobile-search">
 			<input id="mobile-search-bar" type="text" class="form-control" placeholder="search">
 		    </form>
@@ -103,8 +102,8 @@
 		</div>
             </div>
 	</nav>
-	
-	
+
+
 	<div class="container" id="searchBody">
 		<div class="topicSearch">
 			<div class="jumbotrona well">
@@ -132,7 +131,7 @@
 						<li><a href="#">Most Recent</a></li>
 						<li><a href="#">Other options...</a></li>
 					</ul>
-				</div>	
+				</div>
 			</div>
 			<hr>
 			<div class="question">
@@ -195,7 +194,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<!-- Footer -->
 	<footer>
 	    <div class="container">
