--- a/register.html
+++ b/register.html
@@ -140,6 +140,19 @@
 				</div>
 			    </div>
 			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<div class="form-group date text-center" data-provide="datepicker">
+						<input type="date" class="form-control" name="birth"> 
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-6">
+				<div class="form-group">
+				    <input type="text" name="country" id="countryform" class="form-control input-lg" placeholder="Enter Country" tabindex="6">
+				</div>
+			    </div>
+				
+			</div>
 
 			<hr class="colorgraph">
 			<div class="row">
