--- a/final/question.html
+++ b/final/question.html
@@ -202,66 +202,18 @@
         <div class="col-lg-8 answers">
 
           <div class="answers_header">
-            Answers <span class="answer_no">(1)</span>
+            Answer this question
           </div>
-
-          <div class="answer">
-            <div class="media">
-              <div class="media-left">
-                <a href="#">
-                  <img class="hidden-xs media-object user_profile_pic" src="http://placehold.it/64x64" alt="user_image" height="50px">
-                </a>
-              </div>
-              <div class="media-body answer_area">
-                <div class="answer_body">
-                  didn't got your question properly but as far I can understand to solve the problem-
-                  For the padding problem try adding
-                  <code>
-                  android:fitsSystemWindows="true"
-                  android:clipToPadding=”false”
-                  </code>
-                  And for the transparent status bar add
-                  <code>name="android:statusBarColor">@android:color/transparent</code>
-                  to your AppTheme. Hope it helps rest please upload the screenshot of your problem for detailed problem view.
-                </div>
-                <div class="answer_details"> answered by
-                  <a class="answer_author" href="#">ManmeetSingh</a>
-                  on
-                  <span class="answer_date">01/03/2017</span>
-                  at
-                  <span class="answer_hour">15:26</span>
-                </div>
-                <div class="answer_votes">
-                  <a class="badge" href="#"><span class="glyphicon glyphicon-ok"></span></a>
-                  <button type="button" class="btn btn-default comment_btn">
-                    <span aria-hidden="true">comment</span>
-                  </button>
-                  <button type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
-                  </button>
-                  <button type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> 0</span>
-                  </button>
-                  <button type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> 0</span>
-                  </button>
-                </div>
-
-                <hr>
-
-                <div class="comment">
-                  <div class="comment_body">
-                    <a class="comment_author" href="#">KaitlynHanrahan</a>
-                      Didn't work. Thanks anyway.
+          <div class="answer_area">
+              <form action="" method="post" id="form-answer">
+                  <div class="form-group">
+                      <textarea name="answer-body" rows="4" cols="100" class="form-control input-lg" placeholder="Enter your answer here."></textarea>
                   </div>
-                  <button type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
-                  </button>
-                </div>
-              </div>
-            </div>
+                  <input type="submit" value="Submit Answer" form="form-answer" class="btn btn-default" tabindex="7">
+              </form>
+              <hr>
           </div>
-          <hr>
+
         </div>
       </div>
     </div>
